# booyahbox

./: .gitignore
booyahbox/: CMakeLists.txt  flake.nix  readme.md
booyahbox/include/: button_config.h  config.h  display.h  gpio_mapping.h  hotkey.h  image_layout.h  input.h  main_config.h  main_gamepad.h  menu.h  pins.h  profile_manager.h  read_input.h  remap.h  remap_wizard.h  socd.h  tusb_config.h  usb_descriptors.h
booyahbox/src/: board_setup.cpp  button_config.cpp  config.cpp  display.cpp  gpio_mapping.cpp  hotkey.cpp  input.cpp  main.cpp  main_config.cpp  main_gamepad.cpp  menu.cpp  pins.h  profile_manager.cpp  read_input.cpp  remap.cpp  remap_wizard.cpp  socd.cpp  usb_descriptors.cpp
